--- a/app/admin/components/store-order-dispatching/store-order-dispatching-record.component.html
+++ b/app/admin/components/store-order-dispatching/store-order-dispatching-record.component.html
@@ -7,8 +7,7 @@
           <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
         </div>
         <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchByDispatching">
-          <option value="is_approved_prepa_date">PREPARATION DATE</option>
-          <option value="store_code">STORE CODE</option>
+          <option value="fox">STORE CODE</option>
           <option value="category">CATEGORY</option>
         </select>
       </div>
@@ -29,8 +28,8 @@
   <div class="col-lg-12">
     <div class="d-flex">
       <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain">
-        <!-- table table-striped table-bordered nowrap table-responsive-sm -->
-        <table class="" style="width: 100%">
+
+        <table class="table table-striped table-bordered nowrap table-responsive-sm">
           <thead>
             <tr class="text-light header-bg-color-um system-name">
               <th>Order No.</th>
@@ -182,7 +181,7 @@
               <table class="table table-striped table-bordered nowrap table-responsive-sm" id="GridView2"
                 style="width:100%">
                 <thead>
-                  <tr>
+                  <tr class="text-light header-bg-color-um system-name">
                     <th>ID</th>
                     <th>Item Code</th>
                     <th>Description</th>
