--- a/app/admin/components/projects-cancelled-po/projects-cancelled-po.component.html
+++ b/app/admin/components/projects-cancelled-po/projects-cancelled-po.component.html
@@ -51,9 +51,8 @@
   <div class="col-lg-12">
     <div class="d-flex">
       <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
-        <!-- table table-striped table-bordered nowrap table-responsive-sm -->
         <table
-          class=""
+          class="table table-striped table-bordered nowrap table-responsive-sm"
           style="width: 100%"
         >
           <thead>
