--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -61,8 +61,7 @@
           <div class="col-lg-12">
             <div class="d-flex">
               <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
-                <!-- table table-striped table-bordered nowrap table-responsive-sm -->
-                <table class="" style="width: 100%">
+                <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%;" >
                   <thead>
                     <tr class="text-light header-bg-color-um system-name">
                       <th>PO No.</th>
