Updating the static Pagination into model binding

--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -86,7 +86,7 @@
 
                       <td class="text-center">
            
-                        <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, i)"
+                        <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, project)"
                         data-toggle="modal" data-target="#editModal" data-backdrop="false" title="For Checklist"
                         data-keyboard="false">
                         <span class="fa fa-check-circle"></span> Checklist
