Remove Static pagination on cancel the data

--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -96,7 +96,7 @@
                           loginService.currentUserRoleSession == 'Admin'
                         ">
                           <button mat-stroked-button class="editbtnStyle" color="warn"
-                            (click)="onCancelClick($event, i)" data-toggle="modal"
+                            (click)="onCancelClick($event, project)" data-toggle="modal"
                             data-target="#CancelledTransactionModal" data-backdrop="false" data-keyboard="false"
                             title="Cancel PO">
                             <span class="fa fa-ban"></span> Cancel
