--- a/app/admin/components/projects-partial-po/projects-partial-po.component.html
+++ b/app/admin/components/projects-partial-po/projects-partial-po.component.html
@@ -54,7 +54,7 @@
           <div class="col-lg-12">
             <div class="d-flex">
               <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
-                <table class="" style="width: 100%">
+                <table class="table table-striped table-bordered nowrap table-responsive-sm">
                   <thead>
                     <tr class="text-light header-bg-color-um system-name">
                       <th>PO&nbsp;No.</th>
@@ -87,7 +87,7 @@
 
                     <td class="text-center">
 
-                      <button mat-stroked-button class="editbtnStyle" color="black" (click)="onClickView(item, i)"
+                      <button mat-stroked-button class="editbtnStyle" color="black" (click)="onClickView($event, item)"
                         data-toggle="modal" data-target="#viewModal" data-backdrop="false" data-keyboard="false"
                         title="View">
                         <span class="fa fa-eye"></span> View
@@ -98,7 +98,7 @@
                           loginService.currentUserRoleSession == 'Admin') ||
                         loginService.currentUserRoleSession == 'QCSupervisor'
                       ">
-                        <button mat-stroked-button class="editbtnStyle" color="warn" (click)="onCancelClick($event, i)"
+                        <button mat-stroked-button class="editbtnStyle" color="warn" (click)="onCancelClick($event, item)"
                           data-toggle="modal" data-target="#CancelledTransactionModal" data-backdrop="false"
                           data-keyboard="false">
                           <span class="fa fa-ban"></span> Cancel
