Adjustment of viewing items tr content

--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -684,7 +684,7 @@
               <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width: 100%"
                 id="GridView2">
                 <thead>
-                  <tr>
+                  <tr class="text-light header-bg-color-um system-name">
                     <!-- <th>Parent</th> -->
                     <th>ID</th>
                     <th>Item Code</th>
@@ -845,8 +845,7 @@
               <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width: 100%"
                 id="GridView2">
                 <thead>
-                  <tr>
-
+                  <tr class="text-light header-bg-color-um system-name">
                     <th>ID</th>
                     <th>Item Code</th>
                     <th>Description</th>
