--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -1100,14 +1100,13 @@
               <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width: 100%"
                 id="GridView2">
                 <thead>
-                  <tr>
-
+                  <tr class="text-light header-bg-color-um system-name">
                     <th>ID</th>
+                    <th>Item Code</th>
                     <th>Description</th>
                     <th>Uom</th>
                     <th>Serve</th>
                     <th class="hideObject">Total Items</th>
-
                   </tr>
                 </thead>
 
@@ -1115,6 +1114,7 @@
                   <tr *ngFor="let item of itemList">
 
                     <td>{{item.id}}</td>
+                    <td>{{item.mrs_item_code}}</td>
                     <td>{{item.mrs_item_description}}</td>
                     <td>{{item.mrs_uom}}</td>
                     <td>{{item.prepared_allocated_qty | number}}</td>
