--- a/app/components/labtest-module/for-labtest/for-labtest.component.html
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.html
@@ -340,8 +340,8 @@
                 onclick="return false">Prev</a>
             </li>
 
-            <ng-container *ngIf="pages.length <= 10">
-              <li class="page-item" *ngFor="let page of pages" [ngClass]="{
+            <ng-container *ngIf="pagesForApproval.length <= 10">
+              <li class="page-item" *ngFor="let page of pagesForApproval" [ngClass]="{
                   'link-active-paging': page.pageIndex == currentPageIndex
                 }" (click)="onPageIndexClicked(page.pageIndex)">
                 <a class="page-link" href="#" onclick="return false">{{
@@ -350,7 +350,7 @@
               </li>
             </ng-container>
 
-            <ng-container *ngIf="pages.length > 10">
+            <ng-container *ngIf="pagesForApproval.length > 10">
               <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0 }"
                 (click)="onPageIndexClicked(0)">
                 <a class="page-link" href="#" onclick="return false">1</a>
@@ -362,14 +362,14 @@
               </li>
 
               <li *ngIf="
-                  currentPageIndex > 1 && currentPageIndex < pages.length - 2
+                  currentPageIndex > 1 && currentPageIndex < pagesForApprovalength - 2
                 ">
                 &nbsp;...&nbsp;
               </li>
 
               <li class="page-item" [ngClass]="'link-active-paging'" (click)="onPageIndexClicked(currentPageIndex)"
                 *ngIf="
-                  currentPageIndex > 1 && currentPageIndex < pages.length - 2
+                  currentPageIndex > 1 && currentPageIndex < pagesForApproval.length - 2
                 ">
                 <a class="page-link" href="#" onclick="return false">{{
                   currentPageIndex + 1
@@ -379,18 +379,18 @@
               <li>&nbsp;...&nbsp;</li>
 
               <li class="page-item" [ngClass]="{
-                  'link-active-paging': currentPageIndex == pages.length - 2
-                }" (click)="onPageIndexClicked(pages.length - 2)">
+                  'link-active-paging': currentPageIndex == pagesForApprovallength - 2
+                }" (click)="onPageIndexClicked(pagesForApproval.length - 2)">
                 <a class="page-link" href="#" onclick="return false">{{
-                  pages.length - 1
+                  pagesForApproval.length - 1
                   }}</a>
               </li>
 
               <li class="page-item" [ngClass]="{
-                  'link-active-paging': currentPageIndex == pages.length - 1
-                }" (click)="onPageIndexClicked(pages.length - 1)">
+                  'link-active-paging': currentPageIndex == pagesForApproval.length - 1
+                }" (click)="onPageIndexClicked(pagesForApproval.length - 1)">
                 <a class="page-link" href="#" onclick="return false">{{
-                  pages.length
+                  pagesForApproval.length
                   }}</a>
               </li>
             </ng-container>
