--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -61,7 +61,7 @@
           <div class="col-lg-12">
             <div class="d-flex">
               <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
-                <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%;" >
+                <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%;">
                   <thead>
                     <tr class="text-light header-bg-color-um system-name">
                       <th>PO No.</th>
@@ -85,12 +85,12 @@
                       </td>
 
                       <td class="text-center">
-           
-                        <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, project)"
-                        data-toggle="modal" data-target="#editModal" data-backdrop="false" title="For Checklist"
-                        data-keyboard="false">
-                        <span class="fa fa-check-circle"></span> Checklist
-                      </button>
+
+                        <button mat-stroked-button color="primary" class="editbtnStyle"
+                          (click)="onEditClick($event, project)" data-toggle="modal" data-target="#editModal"
+                          data-backdrop="false" title="For Checklist" data-keyboard="false">
+                          <span class="fa fa-check-circle"></span> Checklist
+                        </button>
                         <ng-container *ngIf="
                           loginService.currentUserName != null &&
                           loginService.currentUserRoleSession == 'Admin'
@@ -848,7 +848,8 @@
                     }" (dateChange)="selectExpiryDate($event)" #ExpiryDateChild />
 
                   <mat-hint align="end" *ngFor="let nearlyexpiry of AllowableNearlyExpiryDays | async"
-                    [value]="nearlyexpiry.p_nearly_expiry_desc">{{ nearlyexpiry.p_nearly_expiry_desc }} days allowable to
+                    [value]="nearlyexpiry.p_nearly_expiry_desc">{{ nearlyexpiry.p_nearly_expiry_desc }} days allowable
+                    to
                     expire</mat-hint>
 
                   <mat-datepicker-toggle matSuffix [for]="dobDatepicker">
