Removing Badge Qty Project Partial PO

--- a/app/admin/components/projects-partial-po/projects-partial-po.component.html
+++ b/app/admin/components/projects-partial-po/projects-partial-po.component.html
@@ -80,9 +80,9 @@
                     <td>{{ item.qty_order | number: "1.0":"en-US" }}</td>
                     <td>
                       {{ item.actual_delivery | number: "1.0":"en-US" }}
-                      <mat-icon class="zerobadge{{ item.total_of_reject_mat | number }}"
+                      <!-- <mat-icon class="zerobadge{{ item.total_of_reject_mat | number }}"
                         matBadge="{{ item.total_of_reject_mat | number }}" matBadgeColor="warn">
-                      </mat-icon>
+                      </mat-icon> -->
                     </td>
 
                     <td class="text-center">
